fix: update Go template for successful test execution
- Update go.mod to ADK v0.3.0 and genai v1.40.0
- Add .env file with Jinja templating for project ID
- Add google_cloud_project to cookiecutter config
- Get project ID from gcloud config for Go templates when skip-checks
- Update test to use make install/test for language-agnostic execution
- Fix .asp.yaml to use package_version instead of asp_version
- Add e2e/**/* to _copy_without_render for Go test files
- Skip uv.lock handling for Go projects

--- a/agent_starter_pack/base_templates/go/.env
+++ b/agent_starter_pack/base_templates/go/.env
@@ -3,7 +3,7 @@
 
 # Vertex AI Configuration
 GOOGLE_GENAI_USE_VERTEXAI=true
-GOOGLE_CLOUD_PROJECT=your-gcp-project-id
+GOOGLE_CLOUD_PROJECT={{cookiecutter.google_cloud_project}}
 GOOGLE_CLOUD_LOCATION=us-central1
 
 # Alternatively, for Gemini API (comment out above and set):
