--- a/agent_starter_pack/base_templates/go/Makefile
+++ b/agent_starter_pack/base_templates/go/Makefile
@@ -16,9 +16,9 @@
 # Installation & Setup
 # ==============================================================================
 
-# Download Go module dependencies
+# Download Go module dependencies and generate go.sum
 install:
-	go mod download
+	go mod tidy
 
 # ==============================================================================
 # Playground Targets
