--- a/agent_starter_pack/base_templates/go/.asp.yaml
+++ b/agent_starter_pack/base_templates/go/.asp.yaml
@@ -2,7 +2,7 @@
 # This file is used by the 'enhance' command to identify project settings
 
 name: "{{cookiecutter.project_name}}"
-version: "{{cookiecutter.asp_version}}"
+version: "{{cookiecutter.package_version}}"
 language: "go"
 base_template: "{{cookiecutter.agent_name}}"
 deployment_target: "{{cookiecutter.deployment_target}}"
