feat: improve CLI UX and enhance Go template support
- Add grouped menu structure with emojis for agent/deployment/CI-CD selection
- Improve success messages formatting with structured output
- Add datastore and session type selection styling
- Update enhance command to support Go projects (agent.go detection)
- Update setup-cicd to accept .asp.toml for Go projects
- Rename .asp.yaml to .asp.toml for Go template config
- Add Go support to e2e-tests Docker image
- Update design doc to reflect .asp.toml change

--- a/agent_starter_pack/agents/adk_a2a_base/.template/templateconfig.yaml
+++ b/agent_starter_pack/agents/adk_a2a_base/.template/templateconfig.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-description: "A base ReAct agent built with Google's Agent Development Kit (ADK) and Agent2Agent (A2A) Protocol. #experimental"
+description: "ReAct agent with A2A protocol [experimental]"
 example_question: "What's the weather in San Francisco?"
 settings:
   requires_data_ingestion: false
