--- a/agent_starter_pack/agents/adk_base_go/.template/templateconfig.yaml
+++ b/agent_starter_pack/agents/adk_base_go/.template/templateconfig.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-description: "A base ReAct agent built with Google's ADK for Go"
+description: "Simple ReAct agent"
 example_question: "What's the weather in San Francisco?"
 settings:
   language: "go"
