--- a/agent_starter_pack/agents/agentic_rag/.template/templateconfig.yaml
+++ b/agent_starter_pack/agents/agentic_rag/.template/templateconfig.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-description: "ADK RAG agent for document retrieval and Q&A. Includes a data pipeline for ingesting and indexing documents into Vertex AI Search or Vector Search."
+description: "Document Q&A with RAG pipeline"
 example_question: "How to save a pandas dataframe to CSV?"
 settings:
   requires_data_ingestion: true
