--- a/agent_starter_pack/agents/adk_base/.template/templateconfig.yaml
+++ b/agent_starter_pack/agents/adk_base/.template/templateconfig.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-description: "A base ReAct agent built with Google's Agent Development Kit (ADK)"
+description: "Simple ReAct agent"
 example_question: "What's the weather in San Francisco?"
 settings:
   requires_data_ingestion: false
