--- a/agent_starter_pack/base_templates/go/.github/workflows/staging.yaml
+++ b/agent_starter_pack/base_templates/go/.github/workflows/staging.yaml
@@ -66,9 +66,7 @@ jobs:
           gcloud run deploy {{cookiecutter.project_name}} \
             --image {% raw %}${{ vars.REGION }}{% endraw %}-docker.pkg.dev/{% raw %}${{ vars.CICD_PROJECT_ID }}{% endraw %}/{% raw %}${{ vars.ARTIFACT_REGISTRY_REPO_NAME }}{% endraw %}/{% raw %}${{ vars.CONTAINER_NAME }}{% endraw %} \
             --region {% raw %}${{ vars.REGION }}{% endraw %} \
-            --project {% raw %}${{ vars.STAGING_PROJECT_ID }}{% endraw %} \
-            --service-account {% raw %}${{ vars.APP_SERVICE_ACCOUNT_STAGING }}{% endraw %} \
-            --no-allow-unauthenticated
+            --project {% raw %}${{ vars.STAGING_PROJECT_ID }}{% endraw %}
 
       - name: Get Staging URL
         id: staging-url
